@@ -1,16 +1,0 @@
-#!/bin/sh
-# Cleanup after the first init, which left the initrd mounted
-# on /initrd.
-umount /initrd/dev
-umount /initrd
-if [ "`uname -r | grep '^2.2.'`" = "" ]; then
-	freeramdisk /dev/rd/0
-fi
-
-for script in /etc/rcS.d/S[0-9][0-9]*; do
-    if [ -x $script ]; then
-        $script
-    else
-        . $script
-    fi
-done
