@@ -1,7 +1,0 @@
-dir = etc/rcS.d
-
-files = \
-	S01mount \
-	S50sysklog
-
-include ../../../Makefile.inc
