@@ -1,5 +1,8 @@
 dir = lib
 
-subdirs = debian-installer debian-installer.d
+subdirs = \
+	debian-installer \
+	debian-installer.d \
+	debian-installer-startup.d
 
 include ../../Makefile.inc
