@@ -1,5 +1,4 @@
 #! /bin/sh
-# This script is called at system startup
 # This is where the installer actually interacts with the user
 set -e
 export MENU=${1:-/usr/bin/main-menu}
