@@ -1,14 +1,19 @@
 rootskel (0.79) UNRELEASED; urgency=low
 
+  * Bastian Blank
+    - Move startup code from lib/debian-installer.d and etc/rcS.d to
+      lib/debian-installer-startup.d.
   * Colin Watson
     - Load i8042 and atkbd modules on powerpc 2.6. Some subarchitectures
       require them.
 
- -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jun 2004 14:09:01 +0100
+ -- Bastian Blank <waldi@debian.org>  Tue, 29 Jun 2004 09:23:27 +0200
 
 rootskel (0.78) unstable; urgency=low
 
   * Bastian Blank
+    - debian-installer/kernel/linux/link_in_boot defaults to true.
+    - Remove debian-installer/kernel/linux/devfs.
     - Revert frontend detection change and set DEBIAN_FRONTEND to none.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 27 Jun 2004 20:23:24 +0200
